--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
   },
   "dependencies": {
     "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.16",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
+    "next": "^14.2.26",
+    "postcss": "^8.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "swagger-ui-react": "^5.21.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^4.0.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/swagger-ui-react": "^5.18.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
